# Game

./: .gitignore  .qmake.stash  1.项目概述.md  2.整体架构设计.md  CMakeLists.txt  GameServer.pro  GameServer.pro.user.b0e306c  GameServerHeadless.pro  Icore.h  Makefile  combatbalance.h  core.cpp  core.h  main.cpp  moc_INet.cpp  moc_Icore.cpp  moc_core.cpp  moc_kcpnet.cpp  moc_qkcpserver.cpp  moc_qkcpsocket.cpp  moc_tcpnet.cpp  packdef.h  packetbuilder.h  server.env  server.env.example  server.json  server.json.example  serverconfig.cpp  servermonitorbridge.cpp  servermonitorbridge.h  servermonitorwindow.h  serverupdatemanager.h  tou.h
GameServer/: GameServer.pro  core.cpp  core.h  packdef.h  packetbuilder.h  tou.h
GameServer.app/Contents/: Info.plist
GameServer.app/Contents/MacOS/: GameServer
GameServer/QtKcp/src/: ikcp.h  qkcpserver.cpp  qkcpserver.h  qkcpsocket_global.h
GameServer/mysql/: CMySql.cpp  mysql.pri
GameServer/server2/: INet.h  kcpnet.cpp  tcpnet.cpp  tcpnet.h
data/: update_config.json  version.json
deploy/: build_headless_linux.sh  init_postgres.sql  install_ubuntu_gameserver.sh  jaeger-gameserver.service  setup_postgres_ubuntu.sh
include/: combatbalance.h  core.h  packdef.h  packetbuilder.h  serverconfig.h  servermonitortypes.h  serverupdatemanager.h
mysql/: CMySql.cpp  CMySql.h  mysql.pri  mysqlconnpool.cpp  mysqlconnpool.h
server2/: kcpnet.cpp  kcpnet.h  server2.pri  tcpnet.cpp  tcpnet.h
src/: core.cpp  main.cpp  serverconfig.cpp  servermonitorwindow.cpp  serverupdatemanager.cpp
